[package]
name = "wasmi"
version = "0.4.3"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[features]
default = ["std"]
# Disable for no_std support
std = ["sgx_tstd"]
# Enable for no_std support
# hashbrown only works on no_std
core = ["hashbrown", "libm"]

[dependencies]
parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }
hashbrown = { version = "0.1.8", optional = true, features = ["nightly"] }
memory_units = "0.3.0"
libm = { version = "0.1.2", optional = true }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6", optional = true }


[dev-dependencies]
assert_matches = "1.1"
rand = "0.4.2"
wabt = "0.6"
