[package]
name = "wasmi"
version = "0.4.2"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[features]
#hashmap_core only works on no_std
core = ["hashmap_core", "libm"]

[dependencies]
parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }
hashmap_core = { version = "0.1.9", optional = true }
memory_units = "0.3.0"
libm = { version = "0.1.2", optional = true }
byteorder = { git = "https://github.com/baidu/rust-sgx-sdk.git", default-features = false, rev = "v1.0.4" }


[dev-dependencies]
assert_matches = "1.1"
rand = "0.4.2"
wabt = "0.6"
